--- a/restaurateur/templates/order_items.html
+++ b/restaurateur/templates/order_items.html
@@ -15,6 +15,7 @@
     <tr>
       <th>ID заказа</th>
       <th>Статус</th>
+      <th>Способ оплаты</th>
       <th>Стоимость заказа</th>
       <th>Клиент</th>
       <th>Телефон</th>
@@ -27,11 +28,12 @@
       <tr>
         <td>{{item.id}}</td>
         <td>{{item.get_status_display}}</td>
+        <td>{{item.get_payment_method_display}}</td>
         <td>{{item.total_price}} руб.</td>
         <td>{{item.firstname}} {{item.lastname}}</td>
         <td>{{item.phonenumber}}</td>
         <td>{{item.address}}</td>
-        <td>{{item.comment|truncatechars:25}}</td>
+        <td>{{item.comment}}</td>
         <td><a href="{% url 'admin:foodcartapp_order_change' object_id=item.id %}?next={{ '/manager/orders/'|urlencode }}">Редактировать</a></td>
       </tr>
     {% endfor %}
